--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,12 @@
     "@typescript-eslint/explicit-function-return-type": "error",
     "no-console": "error"
   },
-  "ignorePatterns": ["dist/", "coverage/", "node_modules/", "jest.config.js"]
+  "ignorePatterns": [
+    "dist/",
+    "coverage/",
+    "node_modules/",
+    "jest.config.js",
+    "test/e2e-fixtures/",
+    "test/manual/"
+  ]
 }
