--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "isolatedModules": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "__tests__", "coverage"]
+  "exclude": ["node_modules", "dist", "test", "coverage"]
 }
