--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,7 @@ updates:
         patterns:
           - '@types/*'
           - '@vercel/*'
+          - '@eslint/*'
           - 'eslint*'
           - 'prettier'
           - 'typescript'
@@ -17,6 +18,7 @@ updates:
           - 'ts-jest'
           - 'husky'
           - 'lint-staged'
+          - 'esbuild'
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
