--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,9 +49,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint and test
+      - name: Lint, format check, and test
         run: |
           npm run lint
+          npm run format:check
           npm run typecheck
           npm run test:unit
 
@@ -66,9 +67,10 @@ jobs:
           fi
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
+          files: dist/index.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
