--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,9 +1,10 @@
 name: E2E Tests
 
 on:
-  push:
-    branches: [main]
-  pull_request:
+  workflow_run:
+    workflows: ['CI']
+    types:
+      - completed
     branches: [main]
 
 permissions:
@@ -13,6 +14,7 @@ jobs:
   e2e-tests:
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     strategy:
       fail-fast: false
