--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.0.0",
     "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
