--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -87,7 +87,7 @@ development_status:
   epic-7: 'in-progress'
   7-1-add-configuration-inputs-to-action: 'done'
   7-2-parse-configuration-inputs: 'done'
-  7-3-load-config-files-and-pass-to-sdk: 'backlog'
+  7-3-load-config-files-and-pass-to-sdk: 'done'
   7-4-implement-list-models-feature: 'backlog'
   7-5-create-example-workflows: 'backlog'
   7-6-update-documentation: 'backlog'
