--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -88,7 +88,7 @@ development_status:
   7-1-add-configuration-inputs-to-action: 'done'
   7-2-parse-configuration-inputs: 'done'
   7-3-load-config-files-and-pass-to-sdk: 'done'
-  7-4-implement-list-models-feature: 'backlog'
+  7-4-implement-list-models-feature: 'done'
   7-5-create-example-workflows: 'backlog'
   7-6-update-documentation: 'backlog'
   epic-7-retrospective: 'backlog'
