--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "js-yaml": "^4.1.1",
     "lint-staged": "^16.2.7",
     "prettier": "^3.1.0",
     "ts-jest": "^29.1.0",
