--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -84,11 +84,11 @@ development_status:
   epic-6-retrospective: 'ready-for-dev'
 
   # Epic 7: Configuration Customization & Examples
-  epic-7: 'in-progress'
+  epic-7: 'done'
   7-1-add-configuration-inputs-to-action: 'done'
   7-2-parse-configuration-inputs: 'done'
   7-3-load-config-files-and-pass-to-sdk: 'done'
   7-4-implement-list-models-feature: 'done'
   7-5-create-example-workflows: 'done'
-  7-6-update-documentation: 'backlog'
+  7-6-update-documentation: 'done'
   epic-7-retrospective: 'backlog'
