Fix test script patterns in package.json for consistency

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "bundle": "esbuild src/index.ts --bundle --platform=node --target=node20 --format=cjs --outfile=dist/index.js --sourcemap",
     "test": "jest --coverage",
     "test:unit": "jest --testPathPatterns='src/.*\\.spec\\.ts$' --coverage",
-    "test:integration": "jest --testPathPattern=integration --runInBand",
-    "test:e2e": "jest --testPathPattern=e2e --runInBand --testTimeout=180000",
+    "test:integration": "jest --testPathPatterns=integration --runInBand",
+    "test:e2e": "jest --testPathPatterns=e2e --runInBand --testTimeout=180000",
     "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --max-warnings 0",
     "format": "prettier --write src test",
     "format:check": "prettier --check src test",
