#Add more config for CI

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "test": "jest --coverage",
     "test:unit": "jest --testPathPatterns='src/.*\\.spec\\.ts$' --coverage",
     "test:integration": "jest --testPathPatterns=integration --runInBand",
+    "test:unit:ci": "jest --testPathPatterns='src/.*\\.spec\\.ts$' --coverage --reporters=default --reporters=jest-junit",
+    "test:integration:ci": "jest --testPathPatterns=integration --runInBand --reporters=default --reporters=jest-junit",
     "test:e2e": "jest --testPathPatterns=e2e --runInBand --testTimeout=180000",
     "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --max-warnings 0",
+    "lint:ci": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --max-warnings 0 --format json --output-file reports/eslint-report.json",
     "format": "prettier --write src test",
     "format:check": "prettier --check src test",
     "typecheck": "tsc --noEmit",
@@ -49,6 +52,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "jest-junit": "^16.0.0",
     "js-yaml": "^4.1.1",
     "lint-staged": "^16.2.7",
     "prettier": "^3.1.0",
