Update sprint status for action 8-3 to in-progress and add story documentation for GitHub Marketplace publishing

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -97,5 +97,5 @@ development_status:
   epic-8: 'in-progress'
   8-1-add-docker-image-build-and-push-to-release-pipeline: 'done'
   8-2-update-action-yml-to-reference-prebuilt-ghcr-image: 'done'
-  8-3-publish-action-to-github-marketplace: 'backlog'
+  8-3-publish-action-to-github-marketplace: 'in-progress'
   epic-8-retrospective: 'backlog'
