--- a/action.yml
+++ b/action.yml
@@ -55,7 +55,7 @@ outputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/arch-playground/ai-workflow-runner:1'
+  image: 'docker://ghcr.io/arch-playground/ai-workflow-runner:v1'
 
 branding:
   icon: 'play-circle'
