--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,9 @@ updates:
     schedule:
       interval: 'weekly'
     open-pull-requests-limit: 10
+    commit-message:
+      prefix: 'chore'
+      include: 'scope'
     groups:
       dev-dependencies:
         patterns:
@@ -23,3 +26,6 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+    commit-message:
+      prefix: 'chore'
+      include: 'scope'
