--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,80 +2,36 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-
-permissions:
-  contents: write
+    branches: [main]
 
 concurrency:
   group: release
   cancel-in-progress: false
 
 jobs:
-  validate-tag:
+  release-please:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     outputs:
-      major: ${{ steps.semver.outputs.major }}
-    steps:
-      - name: Validate semver tag
-        id: semver
-        run: |
-          TAG="${{ github.ref_name }}"
-          if ! echo "$TAG" | grep -qE '^v[0-9]+\.[0-9]+\.[0-9]+$'; then
-            echo "Invalid semver tag: $TAG"
-            exit 1
-          fi
-          MAJOR=$(echo "$TAG" | cut -d'.' -f1)
-          echo "major=$MAJOR" >> $GITHUB_OUTPUT
-
-  release:
-    needs: validate-tag
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+      version: ${{ steps.release.outputs.version }}
+      major: ${{ steps.release.outputs.major }}
+      minor: ${{ steps.release.outputs.minor }}
+      patch: ${{ steps.release.outputs.patch }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6
+      - name: Run release-please
+        id: release
+        uses: googleapis/release-please-action@v4
         with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Lint, format check, and test
-        run: |
-          npm run lint
-          npm run format:check
-          npm run typecheck
-          npm run test:unit
-
-      - name: Bundle
-        run: npm run bundle
-
-      - name: Verify bundle exists
-        run: |
-          if [ ! -f dist/index.js ]; then
-            echo "Bundle not found!"
-            exit 1
-          fi
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          generate_release_notes: true
-          files: dist/index.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          release-type: node
 
   publish-image:
-    needs: [validate-tag, release]
+    needs: release-please
+    if: needs.release-please.outputs.release_created == 'true'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     permissions:
@@ -101,9 +57,11 @@ jobs:
         with:
           images: ghcr.io/arch-playground/ai-workflow-runner
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
-            type=raw,value=latest
+            type=raw,value=${{ needs.release-please.outputs.version }}
+            type=raw,value=${{ needs.release-please.outputs.major }}.${{ needs.release-please.outputs.minor }},enable=${{ !contains(needs.release-please.outputs.tag_name, '-') }}
+            type=raw,value=${{ needs.release-please.outputs.major }},enable=${{ !contains(needs.release-please.outputs.tag_name, '-') }}
+            type=raw,value=latest,enable=${{ !contains(needs.release-please.outputs.tag_name, '-') }}
+            type=sha,prefix=sha-,format=short
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -113,8 +71,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  update-action-image:
-    needs: [validate-tag, publish-image]
+  update-major-tag:
+    needs: [release-please, publish-image]
+    if: needs.release-please.outputs.release_created == 'true' && !contains(needs.release-please.outputs.tag_name, '-')
     runs-on: ubuntu-latest
     timeout-minutes: 5
     permissions:
@@ -126,17 +85,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Update action.yml to reference published image
-        run: |
-          MAJOR="${{ needs.validate-tag.outputs.major }}"
-          sed -i "s|image:.*|image: 'docker://ghcr.io/arch-playground/ai-workflow-runner:${MAJOR}'|" action.yml
-
       - name: Update major version tag
+        env:
+          MAJOR: ${{ needs.release-please.outputs.major }}
+          TAG: ${{ needs.release-please.outputs.tag_name }}
         run: |
-          MAJOR="${{ needs.validate-tag.outputs.major }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add action.yml
-          git commit -m "ci: update action.yml to use pre-built GHCR image ${MAJOR}"
-          git tag -fa "$MAJOR" -m "Update $MAJOR to ${{ github.ref_name }}"
-          git push origin "$MAJOR" --force
+          RELEASE_SHA=$(git rev-list -n 1 "${TAG}")
+          git tag -fa "v${MAJOR}" "${RELEASE_SHA}" -m "Update v${MAJOR} to ${TAG}"
+          git push origin "v${MAJOR}" --force
